Refactor PluginsScanner to streamline JAR path handling and replace deprecated methods with Path.of()